# data-science-repository

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_LR_using_GD_and_vectorization.ipynb
